--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body onLoad="onLoad()" style="margin: 0; padding: 0;">
 <canvas id="theCanvas"></canvas>
 
-<div id="logo" style="position: absolute; z-index: 2; top: 10px; left: 10px; font-family: 'Lobster', cursive; font-size: 28pt; color: black; text-shadow: 2px 2px lightgray; background-color: white;">
+<div id="logo" style="position: absolute; z-index: 2; top: 10px; left: 10px; font-family: 'Lobster', cursive; font-size: 28pt; color: black; text-shadow: 2px 2px lightgray; background-color: white; visibility: hidden;">
 	Scribbler
 </div>
 
-<div id="status" style="position: absolute; width: 20%; height: 20%; top: 0; left: 0; z-index: 2; margin: 10px; font-family: sans-serif; font-weight: bold; font-size: 22pt;"></div>
+<div id="status" style="position: absolute; height: 20%; width: 10%; top: 0; right: 0; z-index: 2; margin: 10px; font-family: 'Lobster', cursive; font-weight: bold; font-size: 22pt; text-align: left;"></div>
 
 <script src="/scripts/game.js"></script>
 
