--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div id="status" style="position: absolute; height: 20%; width: 10%; top: 0; right: 0; z-index: 2; margin: 10px; font-family: 'Lobster', cursive; font-weight: bold; font-size: 22pt; text-align: left;"></div>
 
-<script src="/scripts/game.js"></script>
+<script src="/public/scripts/game.js"></script>
 
 </body>
 
