Added panning map, still requires further optimisation such as spatial mapping of food and snake locations

--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
 	<title>Scribbler</title>
 	<script src="/socket.io/socket.io.js"></script>
-	<link href="//fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+	<link href='//fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 
-<body onLoad="onLoad()" style="margin: 0; padding: 0;">
+<body style="margin: 0; padding: 0;">
 <canvas id="theCanvas"></canvas>
 
-<div id="logo" style="position: absolute; z-index: 2; top: 10px; left: 10px; font-family: 'Lobster', cursive; font-size: 28pt; color: black; text-shadow: 2px 2px lightgray; background-color: white; visibility: hidden;">
-	Scribbler
-</div>
-
-<div id="status" style="position: absolute; height: 20%; width: 10%; top: 0; right: 0; z-index: 2; margin: 10px; font-family: 'Lobster', cursive; font-weight: bold; font-size: 22pt; text-align: left;"></div>
+<div id="status" style="position: absolute; height: 20%; top: 0; right: 0; z-index: 2; margin: 10px; font-family: 'Indie Flower', cursive; font-weight: bold; font-size: 22pt; text-align: right;"></div>
 
 <script src="/scripts/game.js"></script>
 
