--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 <div id="status" style="position: absolute; height: 20%; top: 0; right: 0; z-index: 2; margin: 10px; font-family: 'Indie Flower', cursive; font-weight: bold; font-size: 22pt; text-align: right;"></div>
 
+<div id="splash" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color:rgba(0, 0, 0, 0.3);">
+    <div id="splash_box" style="position: absolute; background-color: white; width: 50%; height: 80%; left: 25%; top: 10%; border: 1px solid black; font-family: 'Indie Flower', cursive; text-align: center;">
+        <h1>Scribbler</h1>
+        <input type="text" />
+        <button onClick="startGame()">Start</button>
+    </div>
+</div>    
+
 <script src="/scripts/game.js"></script>
 
 </body>
